Move back to JDK-21, since Java 24 is not LTS
Signed-off-by: Gulshan <kumargu@amazon.com>